@@ -15,6 +15,12 @@ module Koala
         class << self
           attr_accessor :always_use_ssl
         end
+        
+        protected
+        def self.params_require_multipart?(param_hash)
+          param_hash.any? { |key, value| value.kind_of? File }
+        end
+        
       end
     end
   end
@@ -75,13 +81,9 @@ module Koala
           end).join("&")
         end
         
-        def self.params_require_multipart?(param_hash)
-          param_hash.any? { |key, value| value.kind_of? File }
-        end
-        
         def self.encode_multipart_params(param_hash)
           Hash[*param_hash.collect do |key, value| 
-            [key, value.kind_of?(File) ? UploadIO.new(value, infer_content_type(value)) : value]
+            [key, value.kind_of?(File) ? UploadIO.new(value, infer_content_type(value), value.path) : value]
           end.flatten]
         end
         
@@ -91,7 +93,7 @@ module Koala
         # consider refactoring this out into a separate class or
         # even depend on a third-party gem to infer content types
         def self.infer_content_type(file_or_name)
-          ext = File.extname(file_or_name.kind_of?(File) ? file_or_name.path : file_or_name)
+          ext = File.extname(file_or_name.kind_of?(File) ? file_or_name.path : file_or_name).downcase
           
           case ext
             when ".gif" then "image/gif"
@@ -112,27 +114,39 @@ module Koala
 
   module TyphoeusService
     # this service uses Typhoeus to send requests to the graph
+
+    # used for multipart file uploads (see below)
+    class NetHTTPInterface
+      include NetHTTPService
+    end
+
     def self.included(base)
       base.class_eval do
         require "typhoeus" unless defined?(Typhoeus)
         include Typhoeus
-
+        
         include Koala::HTTPService
 
         def self.make_request(path, args, verb, options = {})
-          # if the verb isn't get or post, send it as a post argument
-          args.merge!({:method => verb}) && verb = "post" if verb != "get" && verb != "post"
-          server = options[:rest_api] ? Facebook::REST_SERVER : Facebook::GRAPH_SERVER
+          unless params_require_multipart?(args)
+            # if the verb isn't get or post, send it as a post argument
+            args.merge!({:method => verb}) && verb = "post" if verb != "get" && verb != "post"
+            server = options[:rest_api] ? Facebook::REST_SERVER : Facebook::GRAPH_SERVER
 
-          # you can pass arguments directly to Typhoeus using the :typhoeus_options key
-          typhoeus_options = {:params => args}.merge(options[:typhoeus_options] || {})
+            # you can pass arguments directly to Typhoeus using the :typhoeus_options key
+            typhoeus_options = {:params => args}.merge(options[:typhoeus_options] || {})
 
-          # by default, we use SSL only for private requests (e.g. with access token)
-          # this makes public requests faster
-          prefix = (args["access_token"] || @always_use_ssl || options[:use_ssl]) ? "https" : "http"
+            # by default, we use SSL only for private requests (e.g. with access token)
+            # this makes public requests faster
+            prefix = (args["access_token"] || @always_use_ssl || options[:use_ssl]) ? "https" : "http"
 
-          response = self.send(verb, "#{prefix}://#{server}#{path}", typhoeus_options)
-          Koala::Response.new(response.code, response.body, response.headers_hash)
+            response = self.send(verb, "#{prefix}://#{server}#{path}", typhoeus_options)
+            Koala::Response.new(response.code, response.body, response.headers_hash)
+          else
+            # we have to use NetHTTPService for multipart for file uploads
+            # until Typhoeus integrates support
+            Koala::TyphoeusService::NetHTTPInterface.make_request(path, args, verb, options)
+          end
         end
       end # class_eval
     end
