@@ -129,7 +129,28 @@ class TyphoeusServiceTests < Test::Unit::TestCase
           @response.headers.should == @mock_headers_hash
         end
       end # describe return value
+    end
+    
+    describe "with file upload" do
+      it "should include an interface to NetHTTPService called NetHTTPInterface" do
+        # we should be able to access it
+        lambda { Koala::TyphoeusService::NetHTTPInterface }.should_not raise_exception(Exception)
+        Koala::TyphoeusService::NetHTTPInterface.included_modules.include?(Koala::NetHTTPService).should be_true
+      end
+      
+      it "should call the NetHTTPInterface if multipart is required" do
+        method = "any_method"
+        args = {}
+        verb = "get"
+        options = {}
 
+        Bear.stub(:params_require_multipart?).and_return(true)
+        Koala::TyphoeusService::NetHTTPInterface.should_receive(:make_request).with(method, args, verb, options)
+
+        Bear.make_request(method, args, verb, options)
+      end
+      
+      # for live tests, run the Graph API tests with Typhoues, which will run file uploads
     end
   end
 end
